--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     gtag('config', 'G-G-F7JTNEX8H9');
 </script>
 <!DOCTYPE html>
-<html lang="en">
+<html lang="kr">
 
 <head>
     <!-- Google Tag Manager -->
@@ -26,35 +26,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="google-site-verification" content="5eU9RG6he0VONRdoUGdEGd5aFzesRkvo_L7BLKh2cbg" />
-    <title>Fyrxweb</title>
-    <meta name="title" content="Fyrxweb" />
+    <title>최고의 웹사이트 개발 및 디지털 마케팅 서비스</title>
+    <meta name="title" content="최고의 웹사이트 개발 및 디지털 마케팅 서비스" />
     <meta name="description"
-        content="At our creative, we specialize in delivering innovative solutions that bring your brand to life. From branding and design to digital marketing strategies, we'll help you stand out from the competition." />
+        content="Fyrxweb은 비즈니스를 위한 웹사이트 개발 및 디지털 마케팅 전문 서비스를 제공합니다. 온라인 인지도를 향상하고 마케팅 목표를 달성할 수 있는 최고의 솔루션을 만나보세요." />
     <meta name="keywords"
-        content="creative agency, branding, design, digital marketing, advertising, innovation, brand development, graphic design, web design, marketing strategies" />
+        content="웹 사이트 개발 서비스, 디지털 마케팅, 온라인 솔루션, 온라인 존재, 디지털 마케팅, Fyrxweb" />
     <meta name="dcterms.subject"
-        content="creative agency, branding, design, digital marketing, advertising, innovation, brand development, graphic design, web design, marketing strategies" />
+        content="웹 사이트 개발 서비스, 디지털 마케팅, 온라인 솔루션, 온라인 존재, 디지털 마케팅, Fyrxweb" />
     <meta name="dcterms.type" content="Service" />
-    <meta name="dcterms.language" content="en" />
-    <link rel="canonical" href="https://fyrxweb.github.io/" />
+    <meta name="dcterms.language" content="kr" />
+    <link rel="canonical" href="https://fyrxweb.github.io/kr" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Fyrxweb" />
+    <meta property="og:title" content="최고의 웹사이트 개발 및 디지털 마케팅 서비스" />
     <meta property="og:description"
-        content="At our creative, we specialize in delivering innovative solutions that bring your brand to life. From branding and design to digital marketing strategies, we'll help you stand out from the competition." />
-    <meta property="og:url" content="https://fyrxweb.github.io/" />
-    <meta property="og:site_name" content="Fyrxweb" />
+        content="Fyrxweb은 비즈니스를 위한 웹사이트 개발 및 디지털 마케팅 전문 서비스를 제공합니다. 온라인 인지도를 향상하고 마케팅 목표를 달성할 수 있는 최고의 솔루션을 만나보세요." />
+    <meta property="og:url" content="https://fyrxweb.github.io/kr" />
+    <meta property="og:site_name" content="최고의 웹사이트 개발 및 디지털 마케팅 서비스" />
     <meta property="og:image" content="https://fyrxweb.github.io/img/opengraph.png" />
-    <meta property="og:image:alt" content="Fyrxweb" />
-    <meta property="og:locale" content="en_EN" />
+    <meta property="og:image:alt" content="최고의 웹사이트 개발 및 디지털 마케팅 서비스" />
+    <meta property="og:locale" content="kr_KR" />
     <meta name="dcterms.subject"
-        content="creative agency, branding, design, digital marketing, advertising, innovation, brand development, graphic design, web design, marketing strategies" />
+        content="웹 사이트 개발 서비스, 디지털 마케팅, 온라인 솔루션, 온라인 존재, 디지털 마케팅, Fyrxweb" />
     <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon" />
     <link rel="apple-touch-icon" href="img/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="dcterms.subject"
         content="Web Hosting Indonesia Terbaik,Hosting Indonesia, Hosting Indonesia Terbaik, Hosting IIX, Hosting Server IIX, unlimited,murah, gratis domain, cpanel, server indonesia,softaculus,free ssl, ssl gratis" />
     <meta name="dcterms.type" content="Service" />
-    <meta name="dcterms.language" content="en" />
+    <meta name="dcterms.language" content="kr" />
     <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon" />
     <link rel="apple-touch-icon" href="img/favicon.svg" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -88,10 +88,10 @@
                     "brand": "Fyrxweb",
                     "offers": { 
                         "@type": "AggregateOffer",
-                        "url": "https://fyrxweb.github.io/",
-                        "priceCurrency": "USD",
-                        "lowPrice": "$170",
-                        "highPrice": "$700",
+                        "url": "https://fyrxweb.github.io/kr",
+                        "priceCurrency": "KRW",
+                        "lowPrice": "222000",
+                        "highPrice": "914370",
                         "offerCount": "3",
                         "priceValidUntil": "2023-01-22" 
                     },
@@ -100,7 +100,7 @@
                         "ratingValue": "4.9",
                         "bestRating": "5",
                         "worstRating": "1",
-                        "ratingCount": "1892"
+                        "ratingCount": "3932"
                     }
                 }
             </script>
@@ -633,43 +633,6 @@
         </div>
     </section>
     <!-- Pricing Section End -->
-
-    <!-- Achievement Section Begin -->
-    <section class="achievement-section set-bg spad" data-setbg="img/achievement-bg.jpg">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-3 col-sm-6">
-                    <div class="achievement__item">
-                        <span class="fa fa-user-o"></span>
-                        <h2 class="achieve-counter">1892</h2>
-                        <p>클라이언트</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-6">
-                    <div class="achievement__item">
-                        <span class="fa fa-edit"></span>
-                        <h2 class="achieve-counter">1423</h2>
-                        <p>웹 유지 관리</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-6">
-                    <div class="achievement__item">
-                        <span class="fa fa-clone"></span>
-                        <h2 class="achieve-counter">127</h2>
-                        <p>웹사이트 테마</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-6">
-                    <div class="achievement__item">
-                        <span class="fa fa-cog"></span>
-                        <h2 class="achieve-counter">10</h2>
-                        <p>지원</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Achievement Section End -->
 
     <!-- Work Section Begin -->
     <section class="work-section spad">
