--- a/소셜 미디어-마케팅-관리-서비스.html
+++ b/소셜 미디어-마케팅-관리-서비스.html
@@ -85,8 +85,8 @@
                         "@type": "AggregateOffer",
                         "url": "https://fyrxweb.github.io/kr/소셜 미디어-마케팅-관리-서비스",
                         "priceCurrency": "KRW",
-                        "lowPrice": "90000",
-                        "highPrice": "377000",
+                        "lowPrice": "1000000",
+                        "highPrice": "3000000",
                         "offerCount": "3",
                         "priceValidUntil": "2023-01-22" 
                     },
@@ -95,7 +95,7 @@
                         "ratingValue": "4.9",
                         "bestRating": "5",
                         "worstRating": "1",
-                        "ratingCount": "1892"
+                        "ratingCount": "1679"
                     }
                 }
             </script>
