--- a/카피라이팅 서비스.html
+++ b/카피라이팅 서비스.html
@@ -85,8 +85,8 @@
                         "@type": "AggregateOffer",
                         "url": "https://fyrxweb.github.io/kr/카피라이팅 서비스",
                         "priceCurrency": "KRW",
-                        "lowPrice": "100000",
-                        "highPrice": "249000",
+                        "lowPrice": "50000",
+                        "highPrice": "150000",
                         "offerCount": "3",
                         "priceValidUntil": "2023-01-22" 
                     },
@@ -95,7 +95,7 @@
                         "ratingValue": "4.9",
                         "bestRating": "5",
                         "worstRating": "1",
-                        "ratingCount": "1892"
+                        "ratingCount": "782"
                     }
                 }
             </script>
@@ -382,7 +382,7 @@
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="pricing__item">
                         <h4>엔터프라이즈 패키지</h4>
-                        <h3>₩914370</h3>
+                        <h3>사용자 지정</h3>
                         <ul>
                             <li>고급 글 작성 (웹사이트, 블로그, 소셜 미디어 등)</li>
                             <li>2000 단어 이내</li>
